--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,164 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <EditText
-        android:id="@+id/homeLabel"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="75dp"
-        android:layout_marginEnd="256dp"
-        android:layout_marginBottom="4dp"
-        android:hint="My Home"
-        android:textColor="#101010"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/homeLat"
+        android:text="Hello World!"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/homeLat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="132dp"
-        android:ems="10"
-        android:inputType="numberDecimal|numberSigned"
-        android:minHeight="48dp"
-        android:hint="Latitude"
-        app:layout_constraintBottom_toTopOf="@+id/homeLong"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeLabel" />
-
-    <EditText
-        android:id="@+id/homeLong"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="15dp"
-        android:ems="10"
-        android:inputType="numberDecimal|numberSigned"
-        android:minHeight="48dp"
-        android:hint="Longitude"
-        app:layout_constraintBottom_toTopOf="@+id/famLabel"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeLat" />
-
-    <EditText
-        android:id="@+id/famLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="211dp"
-        android:layout_marginBottom="4dp"
-        android:hint="Family's Home"
-        android:textColor="#0C0C0C"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/famLong"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/homeLong" />
-
-    <EditText
-        android:id="@+id/famLong"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="15dp"
-        android:ems="10"
-        android:inputType="numberDecimal|numberSigned"
-        android:minHeight="48dp"
-        android:hint="Longitude"
-        app:layout_constraintBottom_toTopOf="@+id/famLat"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friendLabel" />
-
-    <EditText
-        android:id="@+id/famLat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="132dp"
-        android:ems="10"
-        android:inputType="numberDecimal|numberSigned"
-        android:minHeight="48dp"
-        android:hint="Latitude"
-        app:layout_constraintBottom_toTopOf="@+id/famLong"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/famLabel" />
-
-    <EditText
-        android:id="@+id/friendLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="214dp"
-        android:layout_marginBottom="4dp"
-        android:hint="Friend's Home"
-        android:textColor="#0B0B0B"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@+id/friendLat"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/famLong" />
-
-    <EditText
-        android:id="@+id/friendLong"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginEnd="132dp"
-        android:layout_marginBottom="15dp"
-        android:ems="10"
-        android:inputType="numberDecimal|numberSigned"
-        android:minHeight="48dp"
-        android:hint="Longitude"
-        app:layout_constraintBottom_toTopOf="@+id/button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friendLat" />
-
-    <EditText
-        android:id="@+id/friendLat"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="69dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginEnd="132dp"
-        android:ems="10"
-        android:inputType="numberDecimal|numberSigned"
-        android:minHeight="48dp"
-        android:hint="Latitude"
-        app:layout_constraintBottom_toTopOf="@+id/friendLong"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friendLabel" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="158dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="162dp"
-        android:layout_marginBottom="96dp"
-        android:background="#252424"
-        android:text="SUBMIT"
-        android:onClick="onSubmitClicked"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friendLong" />
 </androidx.constraintlayout.widget.ConstraintLayout>
