--- a/app/src/main/res/layout/activity_compass_view.xml
+++ b/app/src/main/res/layout/activity_compass_view.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".CompassViewActivity">
 
+    <Button
+        android:id="@+id/backToAddBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="30dp"
+        android:text="Change Orientation"
+        android:onClick="onBackClicked"
+        app:layout_constraintBottom_toBottomOf="@+id/clock"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clock"
         android:layout_width="wrap_content"
@@ -27,10 +38,11 @@
             android:layout_height="match_parent"
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
+            android:contentDescription="Compass graphic"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:srcCompat="@drawable/compass"
-            tools:layout_editor_absoluteY="225dp"
-            android:contentDescription="Compass graphic" />
+            tools:layout_editor_absoluteY="225dp" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
