--- a/app/src/main/res/layout/activity_preferences.xml
+++ b/app/src/main/res/layout/activity_preferences.xml
@@ -97,6 +97,7 @@
         android:text="+"
         android:textSize="40dp"
         android:clickable="true"
+        android:onClick="onAddClicked"
         android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/changeDisplayName"
         app:layout_constraintEnd_toEndOf="parent"
