--- a/app/src/main/res/layout/activity_compass_view.xml
+++ b/app/src/main/res/layout/activity_compass_view.xml
@@ -28,22 +28,11 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:contentDescription="Compass graphic"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/compass"
-            tools:layout_editor_absoluteY="225dp" />
-
-        <Button
-            android:id="@+id/backToAddBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="onBackClicked"
-            android:text="Change Orientation"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.976" />
+            app:srcCompat="@drawable/compass" />
 
         <ImageView
             android:id="@+id/settings_btn"
