fixed positioning for real, added MockAPI

--- a/app/src/main/res/layout/activity_compass_view.xml
+++ b/app/src/main/res/layout/activity_compass_view.xml
@@ -73,7 +73,7 @@
 
         <ImageView
             android:id="@+id/circle_25"
-            android:layout_width="86.7dp"
+            android:layout_width="87.5dp"
             android:layout_height="wrap_content"
             android:src="@drawable/circle"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -85,28 +85,26 @@
             android:id="@+id/minus_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="16dp"
-            android:src="@drawable/minus"
             android:clickable="true"
+            android:contentDescription="@android:string/ok"
             android:onClick="onMinusClicked"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/circle_75"
-            app:layout_constraintTop_toBottomOf="@+id/plus_btn"/>
+            android:src="@drawable/minus"
+            app:layout_constraintEnd_toEndOf="@+id/plus_btn"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="@+id/plus_btn"
+            app:layout_constraintTop_toBottomOf="@+id/plus_btn" />
 
         <ImageView
             android:id="@+id/plus_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="500dp"
-            android:layout_marginEnd="16dp"
             android:clickable="true"
+            android:contentDescription="@android:string/ok"
             android:onClick="onPlusClicked"
             android:src="@drawable/plus"
             app:layout_constraintBottom_toTopOf="@+id/minus_btn"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/circle_75"
             app:layout_constraintTop_toTopOf="@+id/circle_100" />
 
